# template_ml

./: .gitignore  README.md  pyproject.toml
notebooks/: template_notebook.ipynb
